test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 13 Oct 2025 02:50:37 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="W//gry7LFKnGkIeOqbjOWZM/4GgrW0oo", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}